--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <html>
+
+<head>
+	<title>Jackson Tiller</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
 <body>
-	<div>Hello World</div>
-	
+	<div class = my_name>Jackson Tiller</div>
+	<div class="left">
+
+      <img src="images/resume_icon.png" alt="Resume">
+
+      <center><h3>RESUME</h3></center>
+ </div>
 </body>
 </html>
-
