--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
 </head>
 
 <body>
+
+
 	<div class = my_name>Jackson Tiller</div>
+
+<!-- *************FIRST ICON*************************-->
 	<div class="left">
-
-      <img src="images/resume_icon.png" alt="Resume">
-
+      <a href = "my_resume.pdf">
+      	<img src="images/resume_icon.png" alt="Resume">
+     	</a>
       <center><h3>RESUME</h3></center>
- </div>
+  </div>
+
+<!-- *************SECOND ICON*************************-->
+  <div class="mid">
+			 <img src="images/projects_icon.png" alt="Resume">
+			 <center><h3>PROJECTS</h3></center>
+  </div>
+
+
 </body>
 </html>
