mobile compatibility attempt 2

--- a/index.html
+++ b/index.html
@@ -10,20 +10,23 @@
 
 	<div class = my_name>Jackson Tiller</div>
 
+	<center>
+	<div class= "icons">
 <!-- *************FIRST ICON*************************-->
-	<div class="left">
-      <a href = "my_resume.pdf">
-      	<img src="images/resume_icon.png" alt="Resume">
-     	</a>
-      <center><h3>RESUME</h3></center>
-  </div>
+		<div class="left">
+	      <a href = "my_resume.pdf">
+	      	<img src="images/resume_icon.png" alt="Resume">
+	     	</a>
+	      <center><h3>RESUME</h3></center>
+	  </div>
 
-<!-- *************SECOND ICON*************************-->
-  <div class="mid">
-			 <img src="images/projects_icon.png" alt="Resume">
-			 <center><h3>PROJECTS</h3></center>
-  </div>
-
+	<!-- *************SECOND ICON*************************-->
+	  <div class="mid">
+				 <img src="images/projects_icon.png" alt="Resume">
+				 <center><h3>PROJECTS</h3></center>
+	  </div>
+</div>
+</center>
 
 </body>
 </html>
