--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-	<title>Jackson Tiller</title>
+	<title>Jackson Tiller | Welcome</title>
+	<meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles.css">
 </head>
 
