--- a/index.html
+++ b/index.html
@@ -2,18 +2,28 @@
 
 <head>
 	<title>Jackson Tiller | Welcome</title>
+
+	<!-- Makes mobile friendly layout -->
 	<meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-
+	<!-- *********************MY NAME******************** -->
 	<div class = my_name>Jackson Tiller</div>
+	<!-- ***************INTRODUCTION********************* -->
+	<div class = intro>
+		My name is Jackson Tiller. I am a senior at the University of Texas at
+		Austin. I study Aerospace Engineering and am passionate about all things
+		flight and space. This is a website I created to show a little bit about
+		myself. Feel free to have a look around!
+	</div>
+
 
 	<center>
 	<div class= "icons">
-<!-- *************FIRST ICON*************************-->
+<!-- *************FIRST ICON****************************-->
 		<div class="left">
 	      <a href = "my_resume.pdf">
 	      	<img src="images/resume_icon.png" alt="Resume">
