--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<div class = intro>
 		My name is Jackson Tiller. I am a senior at the University of Texas at
 		Austin. I study Aerospace Engineering and am passionate about all things
-		flight and space. This is a website I created to show a little bit about
-		myself. Feel free to have a look around!
+		flight and space. This is a website I created this website from scratch
+		to show a little bit about myself. Feel free to have a look around!
 	</div>
 
 
