--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
 		to show a little bit about myself. Feel free to have a look around!
 	</div>
 
-	
-
-
 	<center>
 	<div class= "icons">
 <!-- *************FIRST ICON****************************-->
@@ -38,6 +35,15 @@
 				 <img src="images/projects_icon.png" alt="Resume">
 				 <center><h3>PROJECTS</h3></center>
 	  </div>
+
+		<!-- *************Third ICON*************************-->
+			<div class="right">
+					<a href = game.html>
+					 <img src="images/game_icon.png" alt="Resume">
+				 </a> 
+					 <center><h3>GAME</h3></center>
+			</div>
+
 </div>
 </center>
 
