made website not suck

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
@@ -53,11 +55,13 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#services">Method</a>
                     </li>
+                    <!--
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
+                  -->
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -86,7 +90,7 @@
                     <h2 class="section-heading">ASE 374L - Spacecraft/Mission Design Spring 2019</h2>
                     <hr class="light">
                     <p class="text-faded">The purpose of this mission is to retrieve a soil sample from the Aitken Basin and characterize the surrounding environment. This satisfies a need outlined in the decadal survey indicating a desire for a deeper knowledge of the formation of the solar system which can be obtained in a cost effective manner from the lunar south pole.</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Find out How!</a>
                 </div>
             </div>
         </div>
@@ -96,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">To The Moon</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -105,36 +109,39 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <!--<i class="fa fa-4x fa-diamond text-primary sr-icons"></i>-->
+                        <i class="fa fa-4x fa-space-shuttle text-primary sr-icons"></i>
+                        <h3>Atlas V Launch Vehicle</h3>
+                        <p class="text-muted">With a launch success rate of 98.7% and capable of 2.4 million pounds of force, this launch vehicle will easily get us to the moon.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <!--<i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>-->
+                        <i class="fas fa-4x fa-satellite text-primary sr-icons"></i>
+                        <h3>Orbiter Relay</h3>
+                        <p class="text-muted">L-SPIDER will communicate to Earth via a lunar orbiter and will return the lunar sample to the orbiter instead of Earth, consequently increasing its payload capacity.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <!--<i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>-->
+                        <i class="fas fa-4x fa-flask text-primary sr-icons"></i>
+                        <h3>Science</h3>
+                        <p class="text-muted">Over 1kg of Lunar soil will be collected, along with environment measurments such as seismic data, atmospheric composition, and radiation just to name a few.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <i class="fas fa-4x fa-globe-americas text-primary sr-icons"></i>
+                        <h3>Return to Earth</h3>
+                        <p class="text-muted">History will be made as the first Lunar South Pole sample to be brought back to Earth.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+<!--
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
@@ -231,12 +238,12 @@
             </div>
         </div>
     </section>
-
+-->
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+                <h2>Free Download of our ConOps Diagram!</h2>
+                <a href="conops.JPG" class="btn btn-default btn-xl sr-button">Download Now!</a>
             </div>
         </div>
     </aside>
@@ -247,15 +254,15 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Do you have any questions? Would you like to make an investment. Contact our head of PR Sam Hart!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>214-529-1792</p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                    <i class="fas fa-3x fa-envelope sr-contact"></i>
+                    <p><a href="mailto:your-email@your-domain.com">samuelthart@yahoo.com</a></p>
                 </div>
             </div>
         </div>
