--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h2 class="section-heading">ASE 374L - Spacecraft/Mission Design Spring 2019</h2>
                     <hr class="light">
                     <p class="text-faded">The purpose of this mission is to retrieve a soil sample from the Aitken Basin and characterize the surrounding environment. This satisfies a need outlined in the decadal survey indicating a desire for a deeper knowledge of the formation of the solar system which can be obtained in a cost effective manner from the lunar south pole.</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Find out How!</a>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Find out How</a>
                 </div>
             </div>
         </div>
@@ -254,7 +254,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Do you have any questions? Would you like to make an investment. Contact our head of PR Sam Hart!</p>
+                    <p>Do you have any questions? Would you like to make an investment? Contact our head of PR Sam Hart!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
