--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fas fa-3x fa-envelope sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">samuelthart@yahoo.com</a></p>
+                    <p><a href="mailto:samuelthart@yahoo.com">samuelthart@yahoo.com</a></p>
                 </div>
             </div>
         </div>
