chaged to be to will be

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <div class="service-box">
                         <i class="fas fa-4x fa-globe-americas text-primary sr-icons"></i>
                         <h3>Return to Earth</h3>
-                        <p class="text-muted">History will be made as the first Lunar South Pole sample to be brought back to Earth.</p>
+                        <p class="text-muted">History will be made as the first Lunar South Pole sample will be brought back to Earth.</p>
                     </div>
                 </div>
             </div>
