--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                     <li>
                         <a class="page-scroll" href="#services">Method</a>
                     </li>
-                    <!--
+
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#portfolio">Other Information</a>
                     </li>
-                  -->
+
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -141,55 +141,58 @@
             </div>
         </div>
     </section>
-<!--
+
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
+                    <a href="img/lspider_pics3/Slide1.JPG" class="portfolio-box">
+                        <img src="img/lspider_pics3/Slide1.JPG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Organization
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Work Breakdown Structure
                                 </div>
                             </div>
                         </div>
                     </a>
+
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="img/lspider_pics3/Slide2.JPG" class="portfolio-box">
+                        <img src="img/lspider_pics3/Slide2.JPG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Heritage
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Luna 24
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
+                    <a href="img/lspider_pics3/Slide3.JPG" class="portfolio-box">
+                        <img src="img/lspider_pics3/Slide3.JPG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Fearless Leadership
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Sam Kurtin
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+                <!--
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
@@ -235,10 +238,11 @@
                         </div>
                     </a>
                 </div>
+              -->
             </div>
         </div>
     </section>
--->
+
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
